--- a/src/app/feature/create-account-form/create-account-form.component.html
+++ b/src/app/feature/create-account-form/create-account-form.component.html
@@ -1,7 +1,7 @@
-<form class="d-flex flex-column">
+<form class="d-flex flex-column" #myForm="ngForm">
   <mat-form-field appearance="fill">
     <mat-label>role</mat-label>
-    <mat-select [(ngModel)]="selectedValue" name="role">
+    <mat-select [(ngModel)]="selectedValue" name="role" id="role">
       <mat-option *ngFor="let role of roles" [value]="role.value">
         {{ role.viewValue }}
       </mat-option>
@@ -9,12 +9,31 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>username</mat-label>
-    <input type="text" matInput placeholder="Ex. John" />
+    <input
+      [(ngModel)]="username"
+      type="text"
+      id="username"
+      name="username"
+      matInput
+      placeholder="Ex. John"
+    />
     <mat-error>Enter Username</mat-error>
   </mat-form-field>
   <mat-form-field>
+    <mat-label>email</mat-label>
+    <input
+      [(ngModel)]="email"
+      type="email"
+      id="email"
+      name="email"
+      matInput
+      placeholder="Ex. example@example.com"
+    />
+    <mat-error>Enter Valid email</mat-error>
+  </mat-form-field>
+  <mat-form-field>
     <mat-label>password</mat-label>
-    <input type="text" matInput placeholder="Ex. pat@example.com" />
+    <input [(ngModel)]="password" type="password" name="password" matInput />
     <mat-error>Enter password</mat-error>
   </mat-form-field>
   <!-- <button mat-raised-button color="primary">LOGIN</button> -->
