--- a/src/app/profile/cource-lst/cource-lst.component.html
+++ b/src/app/profile/cource-lst/cource-lst.component.html
@@ -1,8 +1,11 @@
 <mat-accordion>
-  <mat-expansion-panel>
+  <mat-expansion-panel *ngFor="let course of courses">
     <mat-expansion-panel-header>
-      <mat-panel-title> This is the expansion title </mat-panel-title>
+      <mat-panel-title> {{ course.course_title }} </mat-panel-title>
+      <mat-panel-description>{{ course.course_code }}</mat-panel-description>
     </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
+    <p>
+      {{ course.course_description }}
+    </p>
   </mat-expansion-panel>
 </mat-accordion>
