--- a/src/app/feature/create-cource-form/create-cource-form.component.html
+++ b/src/app/feature/create-cource-form/create-cource-form.component.html
@@ -1,17 +1,34 @@
-<form class="d-flex flex-column">
+<form class="d-flex flex-column" #myForm="ngForm">
   <mat-form-field>
     <mat-label>cource code</mat-label>
-    <input type="text" matInput placeholder="Ex. ICT1407" />
+    <input
+      [(ngModel)]="course_code"
+      name="course_code"
+      type="text"
+      matInput
+      placeholder="Ex. ICT1407"
+    />
     <mat-error>Enter cource code</mat-error>
   </mat-form-field>
   <mat-form-field>
     <mat-label>cource title</mat-label>
-    <input type="text" matInput placeholder="Ex. pat@example.com" />
+    <input
+      [(ngModel)]="title"
+      name="title"
+      type="text"
+      matInput
+      placeholder="Ex. title"
+    />
     <mat-error>Enter cource title</mat-error>
   </mat-form-field>
   <mat-form-field>
     <mat-label>cource description</mat-label>
-    <textarea matInput></textarea>
+    <textarea
+      matInput
+      [(ngModel)]="description"
+      name="description"
+      placeholder="Description"
+    ></textarea>
   </mat-form-field>
   <!-- <button mat-raised-button color="primary">LOGIN</button> -->
 </form>
