--- a/src/app/feature/create-cource/create-cource-dialog.html
+++ b/src/app/feature/create-cource/create-cource-dialog.html
@@ -5,8 +5,6 @@
   </div>
   <div mat-dialog-actions class="d-flex justify-content-center">
     <button mat-button (click)="onNoClick()">Close</button>
-    <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>
-      Create
-    </button>
+    <button mat-button (click)="onCreate()" cdkFocusInitial>Create</button>
   </div>
 </div>
