--- a/src/app/feature/reg-cource/dialog-overview-dialog.html
+++ b/src/app/feature/reg-cource/dialog-overview-dialog.html
@@ -4,7 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Close</button>
-  <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>
-    Save
-  </button>
+  <button mat-button (click)="onSave()" cdkFocusInitial>Save</button>
 </div>
