--- a/src/app/feature/reg-cource/reg-cource.component.html
+++ b/src/app/feature/reg-cource/reg-cource.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button class="me-3" (click)="openDialog()">
+<button mat-raised-button color="primary" class="me-3" (click)="openDialog()">
   Register cource
 </button>
