--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,16 +1,25 @@
 <div class="d-flex flex-column align-items-center">
   <p class="h4 mt-5">Hello {{ name }}</p>
-  <div class="">
+  <div class="mt-5">
     <div class="d-flex justify-content-center">
-      <app-create-account></app-create-account>
-      <app-create-cource></app-create-cource>
-      <button color="primary" (click)="onClick()" mat-raised-button>
+      <app-create-account *ngIf="role == 4"></app-create-account>
+      <app-create-cource *ngIf="role == 4"></app-create-cource>
+      <button
+        *ngIf="role == 3 || role == 2 || role == 4"
+        color="primary"
+        class="me-3"
+        (click)="onClick()"
+        mat-raised-button
+      >
         View Registered Students
       </button>
+      <app-reg-cource *ngIf="role == 1"></app-reg-cource>
     </div>
     <app-view-reg-students *ngIf="show_reg_students"></app-view-reg-students>
   </div>
-  <p class="h5 mt-4">Your Cources</p>
+  <div *ngIf="role == 1" class="mt-4 d-flex flex-column justify-content-center">
+    <p class="h5">Your Cources</p>
 
-  <app-cource-lst class="mt-5"></app-cource-lst>
+    <app-cource-lst class="mt-3"></app-cource-lst>
+  </div>
 </div>
