--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+  <div class="d-flex mt-5">
+    <p class="h1">Welcome to Student Registration System</p>
+  </div>
+  <div class="mt-5 d-flex justify-content-center">
+    <button routerLink="profile" mat-raised-button color="primary">
+      Go to Profile
+    </button>
+  </div>
+</div>
