--- a/src/app/feature/create-account-form/create-account-form.component.html
+++ b/src/app/feature/create-account-form/create-account-form.component.html
@@ -1,7 +1,7 @@
 <form class="d-flex flex-column" #myForm="ngForm">
   <mat-form-field appearance="fill">
     <mat-label>role</mat-label>
-    <mat-select [(ngModel)]="selectedValue" name="role" id="role">
+    <mat-select [(ngModel)]="selectedValue" name="role" id="role" required>
       <mat-option *ngFor="let role of roles" [value]="role.value">
         {{ role.viewValue }}
       </mat-option>
@@ -16,6 +16,7 @@
       name="username"
       matInput
       placeholder="Ex. John"
+      required
     />
     <mat-error>Enter Username</mat-error>
   </mat-form-field>
@@ -28,12 +29,20 @@
       name="email"
       matInput
       placeholder="Ex. example@example.com"
+      email
+      required
     />
     <mat-error>Enter Valid email</mat-error>
   </mat-form-field>
   <mat-form-field>
     <mat-label>password</mat-label>
-    <input [(ngModel)]="password" type="password" name="password" matInput />
+    <input
+      [(ngModel)]="password"
+      type="password"
+      name="password"
+      matInput
+      required
+    />
     <mat-error>Enter password</mat-error>
   </mat-form-field>
   <!-- <button mat-raised-button color="primary">LOGIN</button> -->
