--- a/src/app/feature/create-account/create-account-dialog.html
+++ b/src/app/feature/create-account/create-account-dialog.html
@@ -1,7 +1,7 @@
 <div class="p-5">
   <h1 mat-dialog-title class="mb-4">Create New Account</h1>
   <div mat-dialog-content>
-    <app-create-account-form></app-create-account-form>
+    <app-create-account-form #child></app-create-account-form>
   </div>
   <div mat-dialog-actions class="d-flex justify-content-center">
     <button mat-button (click)="onNoClick()">Close</button>
