--- a/src/app/feature/create-cource/create-cource-dialog.html
+++ b/src/app/feature/create-cource/create-cource-dialog.html
@@ -1,7 +1,7 @@
 <div class="p-5">
   <h1 mat-dialog-title>Create new Cource</h1>
   <div mat-dialog-content>
-    <app-create-cource-form> </app-create-cource-form>
+    <app-create-cource-form #child> </app-create-cource-form>
   </div>
   <div mat-dialog-actions class="d-flex justify-content-center">
     <button mat-button (click)="onNoClick()">Close</button>
