--- a/src/app/feature/login/login.component.html
+++ b/src/app/feature/login/login.component.html
@@ -4,7 +4,7 @@
     <form class="d-flex flex-column" #myForm="ngForm">
       <mat-form-field appearance="fill">
         <mat-label>role</mat-label>
-        <mat-select [(ngModel)]="role" name="role">
+        <mat-select [(ngModel)]="role" name="role" required>
           <mat-option *ngFor="let role of roles" [value]="role.value">
             {{ role.viewValue }}
           </mat-option>
@@ -18,6 +18,7 @@
           name="username"
           matInput
           placeholder="Ex. John"
+          required
         />
         <mat-error>Enter Username</mat-error>
       </mat-form-field>
@@ -29,6 +30,7 @@
           type="password"
           matInput
           placeholder="password"
+          required
         />
         <mat-error>Enter password</mat-error>
       </mat-form-field>
